--- a/index.html
+++ b/index.html
@@ -1,266 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Bullpen Tracker Pro</title>
-  <style>
-    body {
-      font-family: Arial;
-      margin: 0;
-      background: #f5f7fb;
-      text-align: center;
-    }
-
-    h1 { margin-top: 20px; }
-
-    select, input, button {
-      padding: 8px;
-      margin: 5px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-    }
-
-    #menuBtn {
-      font-size: 26px;
-      position: absolute;
-      left: 15px;
-      top: 10px;
-      cursor: pointer;
-    }
-
-    #sidebar {
-      position: fixed;
-      left: -240px;
-      top: 0;
-      width: 220px;
-      height: 100%;
-      background: #1e1e1e;
-      color: white;
-      padding: 15px;
-      transition: 0.3s;
-    }
-
-    #sidebar button {
-      width: 100%;
-      margin: 3px 0;
-      padding: 8px;
-    }
-
-    canvas {
-      margin-top: 20px;
-      border-radius: 10px;
-      background: white;
-      box-shadow: 0px 2px 10px rgba(0,0,0,0.1);
-    }
-
-    hr {
-      margin: 10px 0;
-      border-color: #444;
-    }
-  </style>
-</head>
-
-<body>
-
-<div id="menuBtn" onclick="toggleMenu()">☰</div>
-
-<div id="sidebar">
-  <h3>Pitchers</h3>
-  <select id="pitcherSelect"></select>
-  <input id="newPitcher" placeholder="Add pitcher">
-  <button onclick="addPitcher()">Add</button>
-  <button onclick="deletePitcher()">Delete Selected</button>
-  <hr>
-  <input type="date" id="sessionDate">
-  <button onclick="setToday()">Today</button>
-</div>
-
-<h1>⚾ Bullpen Tracker Pro</h1>
-
-<select id="pitchType">
-  <option>4-Seam</option>
-  <option>2-Seam</option>
-  <option>Slider</option>
-  <option>Curveball</option>
-  <option>Changeup</option>
-</select>
-
-<input id="velo" type="number" placeholder="Velo">
-
-<br>
-
-<canvas id="zone" width="320" height="320"></canvas>
-
-<br>
-
-<button onclick="drawHeatmap()">Show Heatmap</button>
-<button onclick="showStats()">Show Stats</button>
-<button onclick="exportCSV()">Export CSV</button>
-
-<script>
-/* ------------------- DATA STORAGE ------------------- */
-let pitchers = JSON.parse(localStorage.getItem("pitchers")) || [];
-let bullpenData = JSON.parse(localStorage.getItem("bullpenData")) || {}; // {date: {pitcherName: [pitches]}}
-
-const canvas = document.getElementById("zone");
-const ctx = canvas.getContext("2d");
-const pitcherSelect = document.getElementById("pitcherSelect");
-const dateInput = document.getElementById("sessionDate");
-
-/* ------------------- MENU ------------------- */
-function toggleMenu() {
-  const bar = document.getElementById("sidebar");
-  bar.style.left = bar.style.left === "0px" ? "-240px" : "0px";
-}
-
-/* ------------------- PITCHERS ------------------- */
-function loadPitchers() {
-  pitcherSelect.innerHTML = "";
-  pitchers.forEach(p => {
-    let opt = document.createElement("option");
-    opt.text = p;
-    pitcherSelect.add(opt);
-  });
-}
-loadPitchers();
-
-function addPitcher() {
-  let name = document.getElementById("newPitcher").value;
-  if (!name) return;
-  if (!pitchers.includes(name)) pitchers.push(name);
-  localStorage.setItem("pitchers", JSON.stringify(pitchers));
-  loadPitchers();
-  document.getElementById("newPitcher").value = "";
-}
-
-function deletePitcher() {
-  const name = pitcherSelect.value;
-  if (!name) return;
-  pitchers = pitchers.filter(p => p !== name);
-  localStorage.setItem("pitchers", JSON.stringify(pitchers));
-  loadPitchers();
-
-  // Remove from bullpenData
-  for (let d in bullpenData) {
-    if (bullpenData[d][name]) delete bullpenData[d][name];
-  }
-  localStorage.setItem("bullpenData", JSON.stringify(bullpenData));
-}
-
-/* ------------------- DATE ------------------- */
-function setToday() {
-  const today = new Date().toISOString().split("T")[0];
-  dateInput.value = today;
-}
-
-/* ------------------- DRAW STRIKE ZONE ------------------- */
-function drawZone() {
-  ctx.clearRect(0,0,320,320);
-
-  // outer plate area
-  ctx.strokeStyle = "#ccc";
-  ctx.strokeRect(40,40,240,240);
-
-  // strike zone
-  ctx.strokeStyle = "black";
-  ctx.lineWidth = 2;
-  ctx.strokeRect(100,80,120,160);
-}
-drawZone();
-
-/* ------------------- CLICK TRACKING ------------------- */
-canvas.addEventListener("click", function(e) {
-  const rect = canvas.getBoundingClientRect();
-  const x = e.clientX - rect.left;
-  const y = e.clientY - rect.top;
-
-  savePitch(x,y);
-
-  // dot immediately
-  ctx.fillStyle = "black";
-  ctx.beginPath();
-  ctx.arc(x,y,4,0,Math.PI*2);
-  ctx.fill();
-});
-
-function savePitch(x,y) {
-  const pitcher = pitcherSelect.value;
-  const date = dateInput.value;
-  if (!pitcher || !date) {
-    alert("Select pitcher and date first!");
-    return;
-  }
-
-  if (!bullpenData[date]) bullpenData[date] = {};
-  if (!bullpenData[date][pitcher]) bullpenData[date][pitcher] = [];
-
-  bullpenData[date][pitcher].push({
-    type: document.getElementById("pitchType").value,
-    velo: document.getElementById("velo").value,
-    x:x,
-    y:y
-  });
-
-  localStorage.setItem("bullpenData", JSON.stringify(bullpenData));
-}
-
-/* ------------------- HEATMAP ------------------- */
-function drawHeatmap() {
-  drawZone();
-  const pitcher = pitcherSelect.value;
-  const date = dateInput.value;
-
-  if (!bullpenData[date] || !bullpenData[date][pitcher]) return;
-
-  bullpenData[date][pitcher].forEach(p => {
-    ctx.fillStyle = "rgba(255,0,0,0.3)";
-    ctx.beginPath();
-    ctx.arc(p.x,p.y,10,0,Math.PI*2);
-    ctx.fill();
-  });
-}
-
-/* ------------------- STATS ------------------- */
-function showStats() {
-  const pitcher = pitcherSelect.value;
-  const date = dateInput.value;
-  if (!bullpenData[date] || !bullpenData[date][pitcher]) {
-    alert("No data for this pitcher/date.");
-    return;
-  }
-
-  const data = bullpenData[date][pitcher];
-  const total = data.length;
-  const strikes = data.filter(p => p.x>100 && p.x<220 && p.y>80 && p.y<240).length;
-  const percent = ((strikes/total)*100).toFixed(1);
-
-  let breakdown = {};
-  data.forEach(p => { breakdown[p.type] = (breakdown[p.type]||0)+1; });
-
-  let text = `Pitcher: ${pitcher}\nDate: ${date}\nTotal: ${total}\nStrike %: ${percent}%\n\n`;
-  for (let t in breakdown) text += `${t}: ${breakdown[t]}\n`;
-
-  alert(text);
-}
-
-/* ------------------- EXPORT CSV ------------------- */
-function exportCSV() {
-  let csv = "Date,Pitcher,Type,Velo,X,Y\n";
-
-  for (let d in bullpenData) {
-    for (let p in bullpenData[d]) {
-      bullpenData[d][p].forEach(pitch => {
-        csv += `${d},${p},${pitch.type},${pitch.velo},${pitch.x},${pitch.y}\n`;
-      });
+{
+  "users": {
+    "userId": {
+      "pitchers": ["John","Mike"],
+      "sessions": {
+        "2026-02-24": {
+          "John": [
+            {"x":120,"y":150,"type":"4-Seam","velo":85}
+          ]
+        }
+      }
     }
   }
-
-  let blob = new Blob([csv], {type:'text/csv'});
-  let a = document.createElement("a");
-  a.href = URL.createObjectURL(blob);
-  a.download = "bullpen_data.csv";
-  a.click();
 }
-</script>
-
-</body>
-</html>
